[package]
name = "vx-db"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
futures-util = "0.3.31"
itertools = "0.14.0"
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "v7"] }
vortex = { version = "0.56.0", features = ["tokio"] }
vortex-array = { version = "0.56.0", features = ["test-harness"] }
