[package]
name = "vx-db"
authors = ["Harry Scholes"]
version = "0.1.0"
edition = "2024"
description = "A vector database on top of Vortex"
repository = "https://github.com/harryscholes/vx-db"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
futures-util = "0.3.31"
itertools = "0.14.0"
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["full"] }
tqdm = "0.8.0"
uuid = { version = "1.18.1", features = ["v4", "v7"] }
# vortex = { version = "0.56.0", features = ["tokio"] } # Released versionclap = { version = "4.5.53", features = ["derive"] }
vortex = { git = "https://github.com/vortex-data/vortex.git", rev = "a09481cd7dfcc88f96ad65296a53b6926a81c5a4", features = [
    "tokio",
] } # Specific commit
# vortex = { path = "../vortex/vortex", features = ["tokio"] } # Local workspace version
